--- a/css/main.css
+++ b/css/main.css
@@ -48,12 +48,11 @@ div.jumbotroon1{
 	color: #fff;
 	width: 100%;
 	font-size: 20px;
-
 	margin-top: 20px;
 	border-top-right-radius: 30px;
 	border:4px solid #ccc;
 	margin-bottom: 3%;
-		line-height: 15px;
+	line-height: 15px;
 }
 
 div.jumbotroon11{
@@ -75,7 +74,7 @@ div.pregled{
 }
 
 table, th, td {
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
 }
 th, td {
     padding: 10px;
@@ -87,16 +86,16 @@ table {
     border-spacing: 15px;
 }
 table tr:nth-child(even) {
-    background-color: rgba(0,123,255,0.8);
+    background-color: rgba(0,123,255,0.4);
     text-align: center;
 }
 table tr:nth-child(odd) {
-    background-color: rgba(0,123,255,0.3);
+    background-color: rgba(0,123,255,0.2);
     text-align: center;
 }
 table th {
     color: white;
-    background-color: rgba(0,123,255,0.9);
+    background-color: rgb(0,123,255);
 }
 
 div#pretraga2{
@@ -182,7 +181,7 @@ h1{
 
 }
 h1:hover{
-		color: rgba(198,40,39,0.7);
+	color: rgba(198,40,39,0.7);
 }
 
 #reklama{
@@ -190,3 +189,4 @@ h1:hover{
 	color: #ccc;
 	background-color: rgba(0,0,0,0.4);
 }
+
